--- a/Demos/Minimal/Minimal.dproj
+++ b/Demos/Minimal/Minimal.dproj
@@ -7,8 +7,9 @@
         <MainSource>Minimal.dpr</MainSource>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <ProjectGuid>{9ED56071-1730-40BE-A992-27309A7C55CB}</ProjectGuid>
-        <ProjectVersion>18.8</ProjectVersion>
+        <ProjectVersion>20.2</ProjectVersion>
         <TargetedPlatforms>1</TargetedPlatforms>
+        <ProjectName Condition="'$(ProjectName)'==''">Minimal</ProjectName>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
         <Base>true</Base>
