--- a/Demos/OLE/OLE.dproj
+++ b/Demos/OLE/OLE.dproj
@@ -7,8 +7,9 @@
         <MainSource>OLE.dpr</MainSource>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <ProjectGuid>{3C00F0E3-8F50-46FC-A49D-A7B9DC7DF0A7}</ProjectGuid>
-        <ProjectVersion>20.1</ProjectVersion>
+        <ProjectVersion>20.2</ProjectVersion>
         <TargetedPlatforms>1</TargetedPlatforms>
+        <ProjectName Condition="'$(ProjectName)'==''">OLE</ProjectName>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
         <Base>true</Base>
