Fixes OnChange event #1347
Updated VisibilityDemo to show debug messages when OnChange for VSTs are fired.
Calls ClearCellSelection when VST.Clear is called.
Fixes clipboard tests in VTCellSelectionTests to no longer require 10 tests each.
Created/Moved (Shift)MouseClick to VirtualTrees.MouseUtils under test directory.
Added tests for OnChange, OnChangeCell, Clear, and updated Clipboard tests to use a fixed font and size as it affects the output.

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ Packages/RAD Studio XE3/VirtualTreesR.lib
 # Folder with repro projects #
 ##############################
 /#*
+Tests/dunitx-results.xml
+Tests/TestInsightSettings.ini
