--- a/Packages/RAD Studio 10.1/VirtualTreesR.dproj
+++ b/Packages/RAD Studio 10.1/VirtualTreesR.dproj
@@ -79,25 +79,28 @@
         </DelphiCompile>
         <DCCReference Include="vcl.dcp"/>
         <DCCReference Include="vclx.dcp"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.HeaderPopup.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.AccessibilityFactory.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Accessibility.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.StyleHooks.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.Classes.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.WorkerThread.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.ClipBoard.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.AccessibilityFactory.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Actions.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.Export.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.Utils.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.Types.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.Header.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.DataObject.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.DragnDrop.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.DragImage.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.EditLink.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Classes.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.ClipBoard.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Colors.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.DataObject.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.DragImage.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.DragnDrop.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.DrawTree.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.EditLink.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Export.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Header.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.HeaderPopup.pas"/>
+        <DCCReference Include="..\..\source\VirtualTrees.pas"/>
+        <DCCReference Include="..\..\source\VirtualTrees.BaseTree.pas"/>
+        <DCCReference Include="..\..\source\VirtualTrees.AncestorVCL.pas"/>
+        <DCCReference Include="..\..\source\VirtualTrees.BaseAncestorVCL.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.StyleHooks.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Types.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Utils.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.WorkerThread.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
