Updated tests for missing OnChange event
Updated tests for missing OnChange event
Fixed code to properly handle combination of toMultiSelect, toExtendedFocus and toFullRowSelect

--- a/Tests/Tests.dproj
+++ b/Tests/Tests.dproj
@@ -111,6 +111,10 @@
             <Form>VisibilityForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="VTCellSelectionTests.VTSelectionTestForm.pas">
+            <Form>SelectionTestForm</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
